@@ -3,6 +3,7 @@
    unexpectedly.  with & ok djm@
  - (dtucker) [auth-pam.c] Reset signal handler in pthread_cancel too, add
    test for case where cleanup has already run.
+ - (dtucker) [auth-pam.c] Add minor debugging.
 
 20040113
  - (dtucker) [auth-pam.c] Relocate struct pam_ctxt and prototypes.  No
@@ -1665,4 +1666,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3168 2004/01/14 12:07:56 dtucker Exp $
+$Id: ChangeLog,v 1.3169 2004/01/14 13:15:07 dtucker Exp $
